--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,13 +6,43 @@
    ,url(../../assets/hero.jpg);
    background-size: cover;
    background-position: top;
+   position: relative;
 
    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
 .logobox{
+  position: absolute;
+  top: 40px;
+  left: 40px;
 
 }
 .logo{
+height: 35px ;
+}
 
+.textbox{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.headingprimary{
+  color: #ffff;
+  text-transform: uppercase;
+}
+
+.headingprimarymain{
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+
+}
+.headingprimarysub{
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.4px;
 }
